# taskinator-communicator

./: Cargo.toml  build.rs
src/: error.rs  game.rs  lib.rs
