[package]
name = "taskinator-communicator"
version = "0.1.6"
authors = ["Sam Kirby <sam.kirby94@hotmail.co.uk>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
tracing = "0.1"

[dependencies.winapi]
version = "0.3"
features = [
    "std",
    "errhandlingapi",
    "memoryapi",
    "processthreadsapi",
    "psapi",
]
